--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  file_picker: ^4.0.3
+  file_picker: ^5.5.0
   excel: ^4.0.0
   pdf: ^3.10.0
-
+  json_table: ^2.0.1
+  excel_to_json: ^1.2.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
